# DESi

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  DESi Paper-0 Birth v1-6.docx  INSTALL.md  INSTALL_DUMMIES.md  LEGACY_REUSE.md  MANIFEST.in  QUICKSTART.md  README.md  desi.py  experiment_summary.md  pyproject.toml  requirements-memory.txt  requirements.txt
ab_evidence/: DESI_JURY_PREREGISTRATION.md  LONGMEMEVAL_FULL_PREREGISTRATION.md  PRESSURE_PREREGISTRATION.md  RULER_EXT_PREREGISTRATION.md  RULER_PREREGISTRATION.md  SCALING_PREREGISTRATION.md  _tok.py  ablation_conditions.py  ablation_run.py  ablation_run2.py  auto_state.py  backend.py  build_ablation_pdf.py  build_dossier_pdf.py  build_final_report_pdf.py  build_governance_vs_ablation_pdf.py  build_padded_chat.py  build_pdf.py  build_phase2_pdf.py  build_phase3_pdf.py  build_phase4_pdf.py  build_phase5_pdf.py  build_router_benchmark_pdf.py  build_state.py  build_website_ablation.py  code_review_bugs.py  code_review_run.py  confidence_calibration.py  degeneration.py  evaluate_response.py  follow_up_tasks.py  jury_prompts.py  jury_run.py  longmemeval_full_run.py  longmemeval_run.py  minimaltest_analyze.py  minimaltest_classifier.py  minimaltest_frontier_calibration.py  minimaltest_hybrid.py  minimaltest_hybrid_analyze.py  (+24 more)
claude_compression/: __init__.py  evaluate.py  extractor.py  fixtures.py  rehydrate.py  state.py
claude_layer_probe/: __init__.py  ab_test_design.py  inventory.py  mcp_layer.py  run_probe.py
config/: desi.example.ini
desi/: CALIBRATION_GUIDE.md  ROUTER_APP.md  answerer.py  arithmetic_tool.py  audit.py  classifier.py  config.example.json  dedup.py  engine.py  ledger.py  pipeline.py  policy.py  providers.py  reviewer_port.py  router.py  routing_table.json  tool_registry.py  tool_router.py
desi_router/: CALIBRATION_GUIDE.md  EMBEDDING.md  ROUTER_APP.md  __init__.py  answerer.py  arithmetic_tool.py  audit.py  classifier.py  classifier_eval.py  embed.py  engine.py  ledger.py  pipeline.py  policy.py  providers.py  pyproject.toml  reviewer_port.py  router.py  routing_table.json  routing_table.py  table_evidence.py  tool_registry.py  tool_router.py
desi_router/governance/: __init__.py  audit.py  clsp.py  correction_packet.py  demo.py  k_stability.py  missing_opposition.py  modes.py  preprompt.py  provenance.py  report.py  scope.py  slice_attack.py  state_integrity.py  supersession.py  two_tier_gate.py  verifier.py
desi_router/governance/benchmark/: __init__.py  baselines.py  cases.py  clsp_cases.py  correction_packet_experiment.py  hard_cases.py  live_loop.py  live_relapse.py  metrics.py  mutation_probe.py  pws_cases.py  pws_metrics.py  pws_run.py  replay.py  run.py  semantic_rescore.py  semantic_verifier.py  two_tier_demo.py  underblock.py
desi_router/ontology_probe/: __init__.py  base.py  probe.py  static_adapter.py  wordnet_adapter.py
desi_router/tools/: __init__.py  datemath.py  units.py
docs/: ELI5_DESi.md  ablation_methodology.md  gsm_symbolic_experiment_design.md  router_governance.md
evolution_audit/: decision_attribution.md  evolution_timeline.md  fitness_audit.md  honest_verdict.md  mutation_registry.md  v31_v32_claim_audit.md
examples/: concept_gate_example.py  hello_desi.py  live_llm_example.py  replay_example.py  reviewer_port_example.py
experiments/: semantic_drift_report.md
human_interface/: __init__.py  fitness.py  glossary.py  memory_explorer.py  run_campaign.py  wild_brother.py  wizard.py
outputs/: hf_benchmark_results.jsonl  restored_core_100_results.jsonl
paper0/: README.md  findings.md  probes.md  run_auditor_ablation.py  run_role_policy_experiment.py  self_reflection.md
scripts/: build_external_validation_corpus.py  degeneration_incidence.py  evaluate_external_validation.py  install_dev.ps1  install_dev.sh  redteam_energy_estimate.py  reproduce_driftbench.py  reproduce_marcognity_pdf.py  reproduce_tool_routing.py  run_hard2_rule_test.py  run_hard_benchmark.py  run_holdout_rule_test.py  run_openrouter_reviewer.py  run_sig_corpus_test.py
state_discovery/: __init__.py  discovery.py  evaluate_v3.py  rehydrate_v3.py
state_not_summary/: __init__.py  evaluate_v2.py  extractor_v2.py  rehydrate_v2.py  state_v2.py
tests/: conftest.py  test_cli_doctor.py  test_config_loader.py  test_diagnostics.py  test_dummy_install_docs.py  test_install_usability.py  test_phase_detector.py  test_runner.py  test_solution_space_gap.py
utility_evolution/: __init__.py  candidates.py  harness.py  run_evolution.py
website/: README.md  ablation.html  frame.html  index.html  (+2 more)
(+4959 files in other folders)
